Fix Vercel deployment: Remove platform-specific lightningcss package
- Removed lightningcss-darwin-arm64 package that was causing Vercel build failures
- Updated vercel.json to use proper API route paths (src/app/api/**/*.ts)
- Increased function timeout to 30 seconds for better performance
- Added .npmrc to handle optional dependencies properly
- Fixed platform compatibility for cross-platform deployment

This resolves the 'Unsupported platform' error during Vercel builds by allowing
npm to automatically install the correct lightningcss binary for the target platform.

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
   "functions": {
-    "app/api/**/*.js": {
-      "maxDuration": 10
+    "src/app/api/**/*.ts": {
+      "maxDuration": 30
     }
   },
   "env": {
     "NODE_ENV": "production"
-  }
+  },
+  "buildCommand": "npm run build",
+  "installCommand": "npm install --no-optional"
 }
