Fix Vercel deployment: Migrate from Tailwind CSS v4 to v3
- Downgraded from Tailwind CSS v4 to v3.4.0 to avoid lightningcss binary issues
- Removed @tailwindcss/postcss plugin that was causing platform-specific errors
- Added traditional tailwind.config.js for v3 configuration
- Updated PostCSS config to use standard Tailwind CSS v3 plugins
- Updated globals.css to use @tailwind directives instead of @import
- Simplified Vercel configuration and .npmrc files

This resolves the 'Cannot find module ../lightningcss.linux-x64-gnu.node' error
by using stable Tailwind CSS v3 which doesn't require platform-specific binaries.

--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,7 @@
     }
   },
   "env": {
-    "NODE_ENV": "production"
-  },
-  "buildCommand": "npm run build",
-  "installCommand": "npm install --no-optional"
+    "NODE_ENV": "production",
+    "NEXT_TELEMETRY_DISABLED": "1"
+  }
 }
